[css-grid] Implied minimum size only applies if overflow is visible

Before this was manged in LayoutBox, but since we removed that code in
https://codereview.chromium.org/2398043002, we were not longer verifying
if overflow is or not visible.

BUG=667057
TEST=fast/css-grid-layout/grid-item-overflow.html

Review-Url: https://codereview.chromium.org/2523233002
Cr-Commit-Position: refs/heads/master@{#434381}

Former-commit-id: 0670a81ba8de8f6c7dbb4c34a613a5e1f1777a8d